--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,54 @@
 *,
 *::after,
 *::before {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-	height: 100%;
-	font-family: 'Roboto Mono', monospace, sans-serif, Arial;
-	background-color: #131111dd;
+  height: 100%;
+  font-family: "Roboto Mono", monospace, sans-serif, Arial;
+  background-color: #131111dd;
 }
 
 html {
-	font-size: 62.5%;
-	scroll-behavior: smooth;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 input,
 button,
 textarea,
 select {
-	font-family: inherit;
+  font-family: inherit;
 }
 
 button {
-	border: none;
-	cursor: pointer;
+  border: none;
+  cursor: pointer;
 }
 
 textarea {
-	resize: vertical;
+  resize: vertical;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
